# hassmpris_agent

./: .env  .gitignore  Jenkinsfile  MANIFEST.in  Makefile  README.md  TODO  fixmerequires.txt  hassmpris-agent.spec  hassmpris-settings.desktop  mypy.ini  setup.cfg  tox.ini
src/hassmpris/: certs.py
src/hassmpris/agent/: __init__.py  auth.py  mpris.py  runner.py  servicer.py
src/hassmpris/agent/mpris/: dbus.py  grpc.py
src/hassmpris/cli/: runner.py
src/hassmpris/client/: __init__.py
src/hassmpris/proto/: mpris.proto  mpris_pb2.py  mpris_pb2_grpc.py
src/hassmpris/security/: certs.py  ecdh.py  masc.py  util.py
src/hassmpris/security/proto/: ecdh.proto  ecdh_pb2.py  ecdh_pb2_grpc.py  masc.proto  masc_pb2.py  masc_pb2_grpc.py
src/hassmpris_agent/: __init__.py  auth.py  autodiscovery.py  certs.py  config.py  control.py  server.py  settings.py  verify.py
src/hassmpris_agent/mpris/: grpc.py
src/hassmpris_agent/mpris/dbus/: __init__.py  chromium.py  desktop.py  vlc.py
src/hassmprisintegration/agent/: mpris.py  rpc.py  runner.py  servicer.py
src/hassmprisintegration/cli/: runner.py
src/hassmprisintegration/proto/: mpris_pb2.py  mpris_pb2_grpc.py
tests/: conftest.py  test_ecdh.py
