[metadata]
name = hassmpris
version = attr: hassmpris.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = MPRIS integration for Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/hassmpris
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
install_requires =
    cryptography
    cakes
    blindecdh
    shortauthstrings
    grpcio
    dasbus
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
