[metadata]
name = hassmpris_agent
version = attr: hassmpris_agent.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = Linux desktop agent to allow MPRIS multimedia control from Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/hassmpris
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
install_requires = 
	cryptography
	dasbus
	PyGObject
	pyxdg
	blindecdh>=0.1.8
	shortauthstrings>=0.1.8
	cakes>=0.1.6
	hassmpris>=0.1.16
	zeroconf>=0.38.4
	netifaces>=0.11.0
package_dir = 
	= src
packages = find:

[options.data_files]
share/applications = hassmpris-settings.desktop
share/icons/hicolor/scalable/apps = hassmpris-agent.svg

[options.entry_points]
console_scripts = 
	hassmpris-agent = hassmpris_agent.server:main
	hassmpris-settings = hassmpris_agent.settings:main

[options.packages.find]
where = src

[options.package_data]
hassmpris_agent = py.typed

[egg_info]
tag_build = 
tag_date = 0

